--- a/package.json
+++ b/package.json
@@ -1,25 +1,56 @@
 {
-  "name": "gatsby-starter-default",
+  "name": "nemawashi-home",
   "private": true,
-  "description": "A simple starter to get up and developing quickly with Gatsby",
+  "description": "🏡 of Nemawashi",
   "version": "0.1.0",
-  "author": "Kyle Mathews <mathews.kyle@gmail.com>",
+  "author": "Nemawashi <nemawashi.me@gmail.com>",
   "dependencies": {
+    "babel-plugin-styled-components": "^1.10.7",
+    "classnames": "^2.2.6",
     "gatsby": "^2.23.12",
     "gatsby-image": "^2.4.9",
+    "gatsby-plugin-canonical-urls": "^2.3.6",
+    "gatsby-plugin-google-analytics": "^2.3.6",
     "gatsby-plugin-manifest": "^2.4.14",
     "gatsby-plugin-offline": "^3.2.13",
     "gatsby-plugin-react-helmet": "^3.3.6",
     "gatsby-plugin-sharp": "^2.6.14",
+    "gatsby-plugin-styled-components": "^3.3.6",
+    "gatsby-plugin-typescript": "^2.4.8",
+    "gatsby-remark-autolink-headers": "^2.3.7",
+    "gatsby-remark-copy-linked-files": "^2.3.7",
+    "gatsby-remark-images": "^3.3.14",
+    "gatsby-remark-prismjs": "^3.5.6",
+    "gatsby-remark-responsive-iframe": "^2.4.7",
+    "gatsby-remark-smartypants": "^2.3.6",
     "gatsby-source-filesystem": "^2.3.14",
+    "gatsby-transformer-json": "^2.4.7",
+    "gatsby-transformer-remark": "^2.8.20",
     "gatsby-transformer-sharp": "^2.5.7",
+    "prism-themes": "^1.4.0",
+    "prismjs": "^1.20.0",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-helmet": "^6.1.0"
+    "react-helmet": "^6.1.0",
+    "styled-components": "^5.1.1"
   },
   "devDependencies": {
-    "prettier": "2.0.5"
+    "@types/classnames": "^2.2.10",
+    "@types/jest": "^26.0.3",
+    "@types/node": "^14.0.14",
+    "@types/prop-types": "^15.7.3",
+    "@types/react": "^16.9.41",
+    "@types/react-dom": "^16.9.8",
+    "@types/react-helmet": "^6.0.0",
+    "@types/styled-components": "^5.1.0",
+    "@typescript-eslint/eslint-plugin": "^3.5.0",
+    "@typescript-eslint/parser": "^3.5.0",
+    "eslint": "^7.3.1",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-prettier": "^3.1.4",
+    "prettier": "^2.0.5",
+    "typescript": "^3.9.5"
   },
   "keywords": [
     "gatsby"
@@ -36,9 +67,9 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/gatsbyjs/gatsby-starter-default"
+    "url": "https://gitlab.com/gatsbyjs/gatsby-starter-default"
   },
   "bugs": {
-    "url": "https://github.com/gatsbyjs/gatsby/issues"
+    "url": "https://gitlab.com/gatsbyjs/gatsby/issues"
   }
 }
